XP-4711 Unpublish dialog - content-status displayed with incorrect style * Added a mixin for styling of content status * Changed "Online Pending" status to take one line by default and wrap when needed in the modal dialogs * Switched content item list in modal dialogs to flex layout * Fixed centering of the Unpublish dialog

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/browse/browse-selection-item.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/browse/browse-selection-item.less
@@ -4,10 +4,6 @@
   margin: 10px 10px 0 10px;
   overflow: hidden;
 
-  .viewer {
-    float: left;
-  }
-
   .remove {
     height: 32px;
     margin: 0 5px 0 0;
