--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/dialog/dependant-items-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/dialog/dependant-items-dialog.less
@@ -51,25 +51,20 @@
   .browse-selection-item {
     padding: 4px 0px;
     margin: 0px;
-    display: block;
+    .flexbox();
+
+    .viewer {
+      .flex(5);
+      max-width: 80%;
+    }
 
     .status {
+      .flex(1);
       margin-right: 10px;
-      display: inline-block;
-      float: right;
       text-align: right;
-
-      &.equal {
-        color: @admin-green;
-
-        &.pending {
-          color: darkorange;
-        }
-        &.expired {
-          color: @admin-red;
-        }
-      }
     }
+
+    .content-status-mixin();
   }
 
   .dialog-content {
@@ -138,6 +133,7 @@
           .remove {
             display: none;
             height: 16px;
+            width: 24px;
           }
 
           &.removable {
@@ -174,8 +170,6 @@
           }
 
           .dependant-item-viewer {
-            width: calc(~'100% - 97px');
-
             &.pending-delete .@{_COMMON_PREFIX}names-view {
               .@{_COMMON_PREFIX}main-name, .@{_COMMON_PREFIX}sub-name {
                 text-decoration: line-through;
@@ -202,7 +196,7 @@
               }
 
               .@{_COMMON_PREFIX}names-view {
-                margin-left: 37px;
+                margin-left: 30px;
               }
             }
 
